@@ -25,18 +25,10 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.18</version>
+				<version>2.20</version>
 				<configuration>
-					<forkCount>1</forkCount>
-					<argLine>-Xmx1024m -XX:MaxPermSize=2048m</argLine>
+					<includes><include>**/*.java</include></includes>
 				</configuration>
-				<dependencies>
-					<dependency>
-						<groupId>org.apache.maven.surefire</groupId>
-						<artifactId>surefire-junit47</artifactId>
-						<version>2.18</version>
-					</dependency>
-				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
